# xlsr-english-l2

./: .gitignore  19-198-0002.txt  README.md  eval.ipynb  gg_colab_finetune.ipynb  index.html  inference.ipynb  main.py  pyproject.toml  tmp2.py  wav2vec2_train.py
core/: __init__.py  logic.py
data/: sentences.txt
