[project]
name = "xlsr-english-l2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "g2p-en>=2.1.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]
fix = true
unsafe-fixes = false

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "UP",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
